--- a/0-Config/3_cover.tex
+++ b/0-Config/3_cover.tex
@@ -21,12 +21,12 @@
 %                                 (if omitted defaults to main title without line breaks)
 %-------------------------------------------------------------------
 %         You may use "\\" to force line breaks
-\nttitle(main,en){A Very Long and Impressive\\Thesis Title with a Forced Line Break}%
-\nttitle(main,pt){Um Título de Tese Longo\\e com uma Mudança de Linha Forçada}%
+\nttitle(main,en){Integration of Artificial Intelligence\\into the Code Review Process in the Software Development Life Cycle}%
+\nttitle(main,pt){Integração da Inteligência Artificial\\no Processo de Revisão de Código no Ciclo de Vida de Desenvolvimento de Software}%
 
 %         You may use "\\" to force line breaks
-\nttitle(sub,en){Some thoughts on the Life, the Universe,\\and Everything Else}%
-\nttitle(sub,pt){Algumas considerações sobre a Vida,\\o Universo e Tudo o Mais}%
+\nttitle(sub,en){}%
+\nttitle(sub,pt){}%
 
 %         You may NOT use "\\" to force line breaks
 % \nttitle(spine,en){A Very Long and Impressive Thesis Title}%
@@ -44,8 +44,8 @@
 %    the right name for your Department from the given list
 %    otherwise fill the entries below
 %-------------------------------------------------------------------
-\ntdepartment*(pt){Departamento de\\Nome do Departamento}
-\ntdepartment*(en){Department of\\Name of the Department}
+\ntdepartment*(pt){Departamento de\\Informática}
+\ntdepartment*(en){Department of\\Informatics}
 
 
 
@@ -59,10 +59,8 @@
 %    the right name(s) for the PhD/MSc program from the given list
 %    otherwise fill the entries below
 %-------------------------------------------------------------------
-\ntdegreename*(pt){Nome do Programa de Estudos}
-\ntdegreename*(en){Study Program Name}
-
-
+% \ntdegreename*(pt){Engenharia Informática}
+% \ntdegreename*(en){Informatics Engeneering}
 
 %-------------------------------------------------------------------
 % DEGREE SPECIALIZATION customization
@@ -72,8 +70,8 @@
 %         You may use "\\" to force line breaks
 %         The stared (*) version will only define if undefined, otherwise ignored
 %-------------------------------------------------------------------
-\ntspecialization*(pt){Designação da Especialidade}
-\ntspecialization*(en){Specialization Name}
+% \ntspecialization*(pt){}
+% \ntspecialization*(en){}
 
 
 
@@ -98,7 +96,7 @@
 % SYNTAX: \ntauthorname(gender){full name}{abbreviated name}
 %         Use [f] for female and [m] for male
 %-------------------------------------------------------------------
-\ntauthorname(m){John Very Longname Doe}{John Doe}
+\ntauthorname(m){Miguel Vieira de Almeida}{Miguel Almeida}
 
 
 
@@ -106,8 +104,8 @@
 % AUTHOR previous degree
 % SYNTAX: \ntauthordegree{degree}
 %-------------------------------------------------------------------
-\ntauthordegree(en){Master/BSc in Name of Previous Degree}
-\ntauthordegree(pt){Mestrado/Licenciatura em Nome do Grau Anterior}
+\ntauthordegree(en){BSc in Informatics Engeneering}
+\ntauthordegree(pt){Licenciatura em Engenharia Informática}
 
 
 
@@ -118,8 +116,8 @@
 %                   name in the cover language.
 %-------------------------------------------------------------------
 %Replay with your submission and exam dates in format YYYY-MM-DD
-% \ntdate(submission){year-month-day}
-% \ntdate(exam){year-month-day}
+\ntdate(submission){2025-02-28}
+\ntdate(exam){2025-02-28}
 
 
 
@@ -134,10 +132,10 @@
 %         You may use "\\" to force line breaks
 %-------------------------------------------------------------------
 % Advisers(s)
-\ntaddperson{adviser}(a,f){Mary Doe Adviser Name, Full Professor, NOVA University Lisbon}
+\ntaddperson{adviser}(a,m){João Sousa, Consultor Sénior, Processware}
 % Co-advisers(s)
-\ntaddperson{adviser}(c,m){John Doe Co-Adviser Name, Associate Professor, NOVA University Lisbon}
-\ntaddperson{adviser}(c,f){John Doe other Co-Adviser Name, Full Professor, NOVA University Lisbon}
+\ntaddperson{adviser}(c,m){Jorge Cruz, Professor, NOVA University Lisbon}
+% \ntaddperson{adviser}(c,f){John Doe other Co-Adviser Name, Full Professor, NOVA University Lisbon}
 
 
 
@@ -154,11 +152,11 @@
 %                           [m] for male
 %         You may use "\\" to force line breaks
 %-------------------------------------------------------------------
-\ntaddperson{committee}(c,m){Name of the committee chairperson, Full Professor, NOVA FCT}
-\ntaddperson{committee}(r,m){Name of a rapporteur, Associate Professor, Another University}
-% \ntaddperson{committee}(r,m){Name of another rapporteur, Assistant Professor, Another University}
-% \ntaddperson{committee}(a,m){Name of the adviser present in defense, Associate Professor, Some University}
-% \ntaddperson{committee}(ca,m){Name of the co-adviser present in defense, Associate Professor, Some University}
-\ntaddperson{committee}(m,f){Another member of the committee, Full Professor, Another University}
-\ntaddperson{committee}(m,f){Yet another member of the committee, Assistant Professor, Another University}
-% \ntaddperson{committee}(g,m){Guest member of the committee, Position, University}
+% \ntaddperson{committee}(c,m){Name of the committee chairperson, Full Professor, NOVA FCT}
+% \ntaddperson{committee}(r,m){Name of a rapporteur, Associate Professor, Another University}
+% % \ntaddperson{committee}(r,m){Name of another rapporteur, Assistant Professor, Another University}
+% % \ntaddperson{committee}(a,m){Name of the adviser present in defense, Associate Professor, Some University}
+% % \ntaddperson{committee}(ca,m){Name of the co-adviser present in defense, Associate Professor, Some University}
+% \ntaddperson{committee}(m,f){Another member of the committee, Full Professor, Another University}
+% \ntaddperson{committee}(m,f){Yet another member of the committee, Assistant Professor, Another University}
+% % \ntaddperson{committee}(g,m){Guest member of the committee, Position, University}
