--- a/0-Config/1_novathesis.tex
+++ b/0-Config/1_novathesis.tex
@@ -26,7 +26,7 @@
 
 
 %-------------------------------------------------------------
-% \ntsetup{school=uminho/eeng}    % The school id
+\ntsetup{school=nova/fct/blue}    % The school id
 %                               %     [ nova/fct, nova/fct/di-adc, nova/fct/cbbi,
 %                               %       nova/fct/blue, nova/fct/green, nova/fct/brown, nova/fct/red,
 %                               %       nova/itqb/gray, nova/itqb/green, nova/fcsh, nova/ensp, 
@@ -44,7 +44,7 @@
 
 
 %-------------------------------------------------------------
-% \ntsetup{docstatus=final}     % The status of the document
+\ntsetup{docstatus=working}     % The status of the document
 %                               %     [     working —> working version of the document
 %                                                      skips some “frontmatter” stuff,
 %                                       provisional —> submission version (no committee),
@@ -54,7 +54,7 @@
 %                               %     ]
 %                               % DEFAULT: docstatus=working
 
-% \ntsetup{lang=pt}             % The main language for the document text
+\ntsetup{lang=pt}             % The main language for the document text
 %                               % following ISO 3166-1 (alfa-2)
 %                               %     [ en, pt, fr, it, de, es —> valid languages
 %                               %     ]
