--- a/2-MainMatter/chapter1.tex
+++ b/2-MainMatter/chapter1.tex
@@ -8,32 +8,34 @@
 
 \typeout{NT FILE chapter1.tex}%
 
-\chapter{Introduction}
-\label{cha:introduction}
+\chapter{Introdução}
+\label{cha:introdução}
 
-\prependtographicspath{{5-Figures/Covers/}}
+% \prependtographicspath{{5-Figures/Covers/}}
 
 % epigraph configuration
-\epigraphfontsize{\small\itshape}
-\setlength\epigraphwidth{12.5cm}
-\setlength\epigraphrule{0pt}
+% \epigraphfontsize{\small\itshape}
+% \setlength\epigraphwidth{12.5cm}
+% \setlength\epigraphrule{0pt}
 
-\includegraphics[width=0.1\linewidth]{NOVAthesisFiles/Images/novathesis-insignia}\hfill
-\includegraphics[width=0.875\linewidth]{NOVAthesisFiles/Images/novathesis-text}
+% \includegraphics[width=0.1\linewidth]{NOVAthesisFiles/Images/novathesis-insignia}\hfill
+% \includegraphics[width=0.875\linewidth]{NOVAthesisFiles/Images/novathesis-text}
 
-\noindent This is the \gls{novathesis} \LaTeX\ template \ntindex[Template!]{Version} \novathesisversion\ from   {Template!date}\novathesisdate.
+% \noindent This is the \gls{novathesis} \LaTeX\ template \ntindex[Template!]{Version} \novathesisversion\ from   {Template!date}\novathesisdate.
 
-\epigraph{
-  This work is licensed under the \href{https://www.latex-project.org/lppl/lppl-1-3c/}{\LaTeX\ Project Public License v1.3c}.
-  To view a copy of this \ntindex[Template!]{license}, visit the \href{https://www.latex-project.org/lppl/}{LaTeX project public license}.
-}
+% \epigraph{
+%   This work is licensed under the \href{https://www.latex-project.org/lppl/lppl-1-3c/}{\LaTeX\ Project Public License v1.3c}.
+%   To view a copy of this \ntindex[Template!]{license}, visit the \href{https://www.latex-project.org/lppl/}{LaTeX project public license}.
+% }
 
 % \section{Welcome to the \novathesis\ Template}
 % \label{sec:if_you_use_this_template}
 
-This first Chapter introduces the \gls{novathesis} template and how it is organized. In Chapter~\ref{cha:users_manual} you can find some specific instructions on how to use this template.  Chapter~\ref{cha:a_short_latex_tutorial_with_examples} shows some examples and give some hints on how to write your text. Please read these next Chapters carefully.
+% This first Chapter introduces the \gls{novathesis} template and how it is organized. In Chapter~\ref{cha:users_manual} you can find some specific instructions on how to use this template.  Chapter~\ref{cha:a_short_latex_tutorial_with_examples} shows some examples and give some hints on how to write your text. Please read these next Chapters carefully.
 
-\section{The \emph{NOVAthesis} Template}
+Este capítulo tem como objetivo introduzir o tema e objetivos desta dissertação. É apresentada a motivação para a realização do projeto, o contexto em que o problema abordado se insere e os objetivos a serem alcançados.
+
+\section{Motivação}
 \label{sec:a_bit_of_history}
 
 \ntindex[Template]{}
@@ -332,8 +334,8 @@ The \gls{novathesis} template was born in~1996, and what you see now accumulates
 \end{figure}
 
 
-\section{Getting Started}
-\label{sec:getting_started}
+\section{Contexto}
+\label{sec:contexto}
 
 The template provides an \emph{easy to use} setting for you to write your thesis/dissertation in \LaTeX:
 \begin{itemize}
@@ -354,7 +356,7 @@ The template provides an \emph{easy to use} setting for you to write your thesis
 \begin{wrapfigure}{r}{0.3\linewidth}
 % \vspace*{-10ex}
 \includegraphics[width=\linewidth]{overleaf}%
-\caption{NOVAthesis template in Overleaf.}
+% \caption{NOVAthesis template in Overleaf.}
 \label{fig:overleaf}
 \end{wrapfigure}
 \mbox{}\Overleaf\ is a collaborative cloud-based LaTeX editor used for writing, editing and publishing scientific documents. Like “Google Docs”,  for \LaTeX\ users. You can edit and compile your \LaTeX\ source on the cloud, without installing software in your own computer, and, much like \emph{Google Docs}, you can share your document with others users and everybody can edit the same file at the same time (this may be dangerous).
@@ -402,8 +404,8 @@ Once you have \LaTeX\ up and running, remember to install a good \LaTeX\ text ed
 Now, you must access the \gls{novathesis} repository in \href{https://github.com/joaomlourenco/novathesis}{GitHub}, select the green button \emph{Code} and then \emph{download} (or \emph{clone}) the template.  You will always get the latest version of the template (currently v\novathesisversion\ from \novathesisdate).
 
 
-\section{Getting Help}
-\label{sec:getting_help}
+\section{Definição do Problema}
+\label{sec:definicao_do_problema}
 
 \ntindex[Help]{}
 
@@ -446,16 +448,16 @@ Please do not attempt to contact me directly (email, Messenger, etc)…\\I WILL 
 
 
 
-\section{Donors}
-\label{sec:donations}
+\section{Objetivos}
+\label{sec:objetivos}
 
 \ntindex[Donations]{}
 
 The \href{https://github.com/joaomlourenco/novathesis/wiki#donators}{list of \emph{Donnors}} is available in the \gls{novathesis} Project page.
 
 
-\section{Disclaimer}
-\label{sec:disclaimer}
+\section{Solução Proposta}
+\label{sec:solucao_proposta}
 
 \ntindex[Disclaimer]{}
 
