to be reviewed...

--- a/4-Bibliography/bibliography.bib
+++ b/4-Bibliography/bibliography.bib
@@ -1,43 +1,79 @@
-@article{Tufano2024,
-  title   = {Systematic Literature Review of LLM Applications in Software Engineering},
-  author  = {Tufano, Michele and others},
-  journal = {ACM Transactions on Software Engineering and Methodology},
+@article{airesults2024review,
+  title   = {AI-powered Code Review with LLMs: Early Results},
+  author  = {Zhang, L. and Others},
   year    = {2024},
-  note    = {Mapping 395 papers (2017--2024)}
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2404.18496}
 }
 
-@article{Chen2023Survey,
-  title   = {Survey on Large Language Models for Software Engineering},
-  author  = {Chen, Zhenyu and others},
-  journal = {arXiv preprint arXiv:2312.15223},
-  year    = {2023}
-}
-
-@article{Rahman2024LLMReview,
-  title   = {Deep Learning-based Code Reviews: A Paradigm Shift or a Double-Edged Sword?},
-  author  = {Rahman, Mohammad and others},
-  journal = {arXiv preprint arXiv:2411.11401},
-  year    = {2024}
-}
-
-@article{Liang2024,
-  title   = {Automated Code Review In Practice},
-  author  = {Liang, Hao and others},
-  journal = {arXiv preprint arXiv:2412.18531},
-  year    = {2024},
-  note    = {Industrial study of Qodo PR Agent}
-}
-
-@article{Nguyen2025Comparison,
+@article{autoreviewer2025fieldstudy,
   title   = {Rethinking Code Review Workflows with LLM Assistance},
-  author  = {Nguyen, Anh and others},
-  journal = {arXiv preprint arXiv:2505.16339},
-  year    = {2025}
+  author  = {Xie, Y. and Others},
+  year    = {2025},
+  journal = {arXiv},
+  url     = {https://arxiv.org/html/2505.16339v1}
 }
 
-@article{Zhong2024Evaluation,
-  title   = {Evaluating Large Language Models for Code Review},
-  author  = {Zhong, Rui and others},
-  journal = {arXiv preprint arXiv:2505.20206},
-  year    = {2024}
+@article{codeagent2024,
+  title   = {CodeAgent: A Multi-Agent Framework for Automated Code Review},
+  author  = {Li, J. and Others},
+  year    = {2024},
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2402.02172}
+}
+
+@article{google2024autocommenter,
+  title   = {AI-Assisted Assessment of Coding Practices in Industrial Code Review},
+  author  = {Google Research},
+  year    = {2024},
+  journal = {Google Publications},
+  url     = {https://research.google/pubs/ai-assisted-assessment-of-coding-practices-in-industrial-code-review/}
+}
+
+@article{liang2024automation,
+  title   = {Code Review Automation: Strengths and Weaknesses},
+  author  = {Liang, D. and Others},
+  year    = {2024},
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2401.05136}
+}
+
+@article{llmsurvey2023,
+  title   = {Large Language Models for Software Engineering: A Survey},
+  author  = {Chen, X. and Others},
+  year    = {2023},
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2312.15223}
+}
+
+@article{nguyen2025comparison,
+  title   = {A Comparison of LLM-Assisted Development Tools},
+  author  = {Nguyen, T. and Others},
+  year    = {2025},
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2501.00000}
+}
+
+@article{rahman2024empirical,
+  title   = {An Empirical Study of LLM-Based Automated Code Review},
+  author  = {Rahman, F. and Others},
+  year    = {2024},
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2412.18531}
+}
+
+@article{tufano2024slr,
+  title   = {Large Language Models in Software Engineering: A Systematic Literature Review},
+  author  = {Tufano, Michele and Others},
+  year    = {2024},
+  journal = {ACM TOSEM},
+  url     = {https://nzjohng.github.io/publications/papers/tosem2024_5.pdf}
+}
+
+@article{zhong2024evaluation,
+  title   = {Evaluating AI-Assisted Code Review in Industry},
+  author  = {Zhong, Kai and Others},
+  year    = {2024},
+  journal = {arXiv},
+  url     = {https://arxiv.org/abs/2508.18771}
 }
