Small changes in chapter 1, next up, State of the art......

--- a/2-MainMatter/chapter1.tex
+++ b/2-MainMatter/chapter1.tex
@@ -79,3 +79,5 @@ A proposta assenta nos seguintes componentes principais:
 \end{enumerate}
 
 Em conjunto, estes componentes constituem uma solução prática e extensível, preparada para apoiar revisores humanos e tornar o processo de revisão de código mais eficiente, consistente e alinhado com as necessidades reais da empresa.
+
+No próximo capítulo serão apresentadas as várias tecnologias a serem utilizadas para o desenvolvimento deste projeto, bem como a análise de trabalhos que sejam considerados relevantes para o enquandramento deste tema de dissertação.
