Ajustes do capitulo 1 (contexto da Processware + outras pequenas mudanças) e estrutura para os capitulos 2 e 3

--- a/2-MainMatter/chapter1.tex
+++ b/2-MainMatter/chapter1.tex
@@ -26,7 +26,13 @@ Com o avanço recente dos Modelos de Linguagem (LLMs), já amplamente demonstrad
 
 Esta dissertação enquadra-se no conjunto de soluções desenvolvidas pela Processware para melhorar o processo interno de revisão de código.
 
-Atualmente, a revisão de código na empresa é totalmente manual e depende fortemente da experiência dos revisores. O elevado volume de alterações, a variedade tecnológica e a coexistência de código moderno com código legacy tornam a revisão uma tarefa exigente e pouco escalável~\cite{rahman2024empirical}. Esta situação resulta em tempos de análise elevados e inconsistências entre equipas, dificultando a padronização de práticas internas~\cite{zhong2024evaluation}.
+A Processware é uma empresa tecnológica com presença internacional, especializada no desenvolvimento de soluções para otimização de processos e gestão operacional em ambientes empresariais complexos. A sua atividade centra-se na transformação digital de operações através da combinação de engenharia de processos e plataformas tecnológicas proprietárias, apoiando organizações na melhoria da eficiência, controlo e escalabilidade das suas operações.
+
+No centro da sua oferta encontra-se a plataforma O2P, uma solução baseada na cloud que permite a digitalização, monitorização e otimização de processos operacionais em tempo real, integrando-se com sistemas existentes e suportando diferentes contextos tecnológicos. A empresa atua em sectores com elevada complexidade operacional, caracterizados por múltiplas tecnologias, elevados volumes de dados e necessidade de elevada fiabilidade.
+
+Neste contexto, a Processware mantém uma base de código extensa e heterogénea, distribuída por vários repositórios e tecnologias, o que coloca desafios significativos ao nível da manutenção e da revisão de código. A necessidade de garantir qualidade, consistência e alinhamento com boas práticas internas torna o processo de revisão de código um elemento crítico no seu ciclo de desenvolvimento de software.
+
+Atualmente, o processo de \textit{code review} é totalmente manual e depende fortemente da experiência dos revisores. O elevado volume de alterações, a variedade tecnológica e a coexistência de código moderno com código legacy tornam a revisão uma tarefa exigente e pouco escalável~\cite{rahman2024empirical}. Esta situação resulta em tempos de análise elevados e inconsistências entre equipas, dificultando a padronização de práticas internas~\cite{zhong2024evaluation}.
 
 Dado este cenário, torna-se pertinente explorar soluções baseadas em inteligência artificial, capazes de apoiar a análise de código e contribuir para um processo de revisão mais eficiente, coerente e alinhado com as necessidades atuais de desenvolvimento de software. Estudos recentes mostram que LLMs podem atuar como revisores assistentes, melhorar a qualidade dos comentários, aumentar a uniformidade e acelerar a deteção de problemas~\cite{tufano2024slr,autoreviewer2025fieldstudy}.
 
