--- a/1-FrontMatter/acronyms.tex
+++ b/1-FrontMatter/acronyms.tex
@@ -23,6 +23,10 @@
 
 \newacronym[sort=novathesis]{novathesis}{\novathesis}{NOVAthesis \LaTeX}
 
+\newacronym{LLM}{LLM}{Large Language Model}
+
+\newacronym{LLMs}{LLMs}{Large Language Models}
+
 \newacronym{novathesisclass}{novathesis.cls}{\novathesis\ class}
 
 \newacronym{NOVA}{NOVA}{NOVA University Lisbon}
