--- a/4-Bibliography/bibliography_doi.bib
+++ b/4-Bibliography/bibliography_doi.bib
@@ -77,3 +77,102 @@
   journal = {arXiv},
   url     = {https://arxiv.org/abs/2508.18771}
 }
+
+@article{bacchelli2013expectations,
+  title   = {Expectations, Outcomes, and Challenges of Modern Code Review},
+  author  = {Bacchelli, Alberto and Bird, Christian},
+  journal = {Proceedings of the 35th International Conference on Software Engineering (ICSE)},
+  year    = {2013},
+  pages   = {712--721},
+  publisher = {IEEE}
+}
+
+@article{rigby2013convergent,
+  title   = {Convergent Contemporary Software Peer Review Practices},
+  author  = {Rigby, Peter C. and Bird, Christian},
+  journal = {Proceedings of the 9th Joint Meeting on Foundations of Software Engineering (ESEC/FSE)},
+  year    = {2013},
+  pages   = {202--212},
+  publisher = {ACM}
+}
+
+@article{mcintosh2014empirical,
+  title   = {An Empirical Study of the Impact of Modern Code Review Practices on Software Quality},
+  author  = {McIntosh, Shane and Kamei, Yasutaka and Adams, Bram and Hassan, Ahmed E.},
+  journal = {Empirical Software Engineering},
+  year    = {2014},
+  volume  = {19},
+  number  = {6},
+  pages   = {1819--1850},
+  publisher = {Springer}
+}
+
+@article{fagan1976design,
+  title   = {Design and Code Inspections to Reduce Errors in Program Development},
+  author  = {Fagan, Michael E.},
+  journal = {IBM Systems Journal},
+  year    = {1976},
+  volume  = {15},
+  number  = {3},
+  pages   = {182--211}
+}
+
+@article{johnson2013donotuse,
+  title   = {Why Don’t Software Developers Use Static Analysis Tools to Find Bugs?},
+  author  = {Johnson, Brittany and Song, Yoonki and Murphy-Hill, Emerson and Bowdidge, Robert},
+  journal = {Proceedings of the 35th International Conference on Software Engineering (ICSE)},
+  year    = {2013},
+  pages   = {672--681},
+  publisher = {IEEE}
+}
+
+@article{kim2016warnings,
+  title   = {Which Warnings Should I Fix First?},
+  author  = {Kim, Sunghun and Ernst, Michael D.},
+  journal = {Proceedings of the 6th Joint Meeting on Foundations of Software Engineering (FSE)},
+  year    = {2016},
+  pages   = {45--55},
+  publisher = {ACM}
+}
+
+@article{allamanis2018survey,
+  title   = {A Survey of Machine Learning for Big Code and Naturalness},
+  author  = {Allamanis, Miltiadis and Barr, Earl T. and Devanbu, Premkumar and Sutton, Charles},
+  journal = {ACM Computing Surveys},
+  year    = {2018},
+  volume  = {51},
+  number  = {4},
+  pages   = {1--37},
+  publisher = {ACM}
+}
+
+@article{hindle2012naturalness,
+  title   = {On the Naturalness of Software},
+  author  = {Hindle, Abram and Barr, Earl T. and Su, Zhendong and Gabel, Mark and Devanbu, Premkumar},
+  journal = {Proceedings of the 34th International Conference on Software Engineering (ICSE)},
+  year    = {2012},
+  pages   = {837--847},
+  publisher = {IEEE}
+}
+
+@article{tufano2019deeplearning,
+  title   = {Deep Learning Similarities from Different Representations of Source Code},
+  author  = {Tufano, Michele and Others},
+  journal = {Proceedings of the 26th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)},
+  year    = {2019},
+  publisher = {IEEE}
+}
+
+@article{vaswani2017attention,
+  title   = {Attention Is All You Need},
+  author  = {Vaswani, Ashish and Others},
+  journal = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year    = {2017}
+}
+
+@article{brown2020gpt3,
+  title   = {Language Models Are Few-Shot Learners},
+  author  = {Brown, Tom B. and Others},
+  journal = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year    = {2020}
+}
